@@ -7,7 +7,7 @@ import java.util.stream.Collectors;
 public class MultiplicationTest {
 
     public static int solution(int[] A) {
-        List<Integer> l = Arrays.stream(A).boxed().collect(Collectors.toList());
+        List<Integer> l = Arrays.stream(A).boxed().toList();
         int result = l.stream().reduce(1, (a, b) -> a * b);
         return result >0 ?1 : result<0 ?-1 :0;
     }
